.metadata/.plugins/org.eclipse.cdt.ui/Cypher Trip Wire_CM4.build.log
15:09:03 **** Incremental Build of configuration Debug for project Cypher Trip Wire_CM4 ****
make -j16 all 
arm-none-eabi-gcc "../Core/Src/hcsr04.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DCORE_CM4 -DUSE_HAL_DRIVER -DSTM32H745xx -c -I../Core/Inc -I../../Drivers/STM32H7xx_HAL_Driver/Inc -I../../Drivers/STM32H7xx_HAL_Driver/Inc/Legacy -I../../Drivers/CMSIS/Device/ST/STM32H7xx/Include -I../../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/hcsr04.d" -MT"Core/Src/hcsr04.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/hcsr04.o"
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DCORE_CM4 -DUSE_HAL_DRIVER -DSTM32H745xx -c -I../Core/Inc -I../../Drivers/STM32H7xx_HAL_Driver/Inc -I../../Drivers/STM32H7xx_HAL_Driver/Inc/Legacy -I../../Drivers/CMSIS/Device/ST/STM32H7xx/Include -I../../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
In file included from ../Core/Src/hcsr04.c:8:
../Core/Inc/hcsr04.h:40:32: error: expected '{' before '*' token
   40 | void sensorData(typedef struct *hcsr04_data);
      |                                ^
../Core/Inc/hcsr04.h:40:33: error: storage class specified for parameter 'hcsr04_data'
   40 | void sensorData(typedef struct *hcsr04_data);
      |                                 ^~~~~~~~~~~
../Core/Src/hcsr04.c:22:6: error: conflicting types for 'sensorData'
   22 | void sensorData (struct hcsr04){
      |      ^~~~~~~~~~
In file included from ../Core/Src/hcsr04.c:8:
../Core/Inc/hcsr04.h:40:6: note: previous declaration of 'sensorData' was here
   40 | void sensorData(typedef struct *hcsr04_data);
      |      ^~~~~~~~~~
../Core/Src/hcsr04.c: In function 'sensorData':
../Core/Src/hcsr04.c:22:18: error: parameter name omitted
   22 | void sensorData (struct hcsr04){
      |                  ^~~~~~~~~~~~~
In file included from ../Core/Src/main.c:25:
../Core/Inc/hcsr04.h:40:32: error: expected '{' before '*' token
   40 | void sensorData(typedef struct *hcsr04_data);
      |                                ^
../Core/Inc/hcsr04.h:40:33: error: storage class specified for parameter 'hcsr04_data'
   40 | void sensorData(typedef struct *hcsr04_data);
      |                                 ^~~~~~~~~~~
../Core/Src/main.c: In function 'main':
../Core/Src/hcsr04.c:25:2: warning: implicit declaration of function 'delay' [-Wimplicit-function-declaration]
   25 |  delay(10);
      |  ^~~~~
../Core/Src/main.c:99:3: warning: implicit declaration of function 'printf' [-Wimplicit-function-declaration]
   99 |   printf("Initializing sensor...\n");
      |   ^~~~~~
../Core/Src/main.c:99:3: warning: incompatible implicit declaration of built-in function 'printf'
../Core/Src/main.c:26:1: note: include '<stdio.h>' or provide a declaration of 'printf'
   25 | #include "hcsr04.h"
  +++ |+#include <stdio.h>
   26 | /* USER CODE END Includes */
In file included from ../Core/Inc/stm32h7xx_hal_conf.h:454,
                 from ../../Drivers/STM32H7xx_HAL_Driver/Inc/stm32h7xx_hal.h:29,
                 from ../Core/Inc/main.h:30,
                 from ../Core/Src/main.c:20:
../Core/Src/main.c:114:21: error: 'htim2' undeclared (first use in this function); did you mean 'htim3'?
  114 |   __HAL_TIM_ENABLE(&htim2);
      |                     ^~~~~
../../Drivers/STM32H7xx_HAL_Driver/Inc/stm32h7xx_hal_tim.h:1221:56: note: in definition of macro '__HAL_TIM_ENABLE'
 1221 | #define __HAL_TIM_ENABLE(__HANDLE__)                 ((__HANDLE__)->Instance->CR1|=(TIM_CR1_CEN))
      |                                                        ^~~~~~~~~~
../Core/Src/main.c:114:21: note: each undeclared identifier is reported only once for each function it appears in
  114 |   __HAL_TIM_ENABLE(&htim2);
      |                     ^~~~~
../../Drivers/STM32H7xx_HAL_Driver/Inc/stm32h7xx_hal_tim.h:1221:56: note: in definition of macro '__HAL_TIM_ENABLE'
 1221 | #define __HAL_TIM_ENABLE(__HANDLE__)                 ((__HANDLE__)->Instance->CR1|=(TIM_CR1_CEN))
      |                                                        ^~~~~~~~~~
../Core/Src/main.c:127:17: error: expected expression before 'hcsr04_data'
  127 |     sensorData(*hcsr04_data);
      |                 ^~~~~~~~~~~
../Core/Src/hcsr04.c:30:2: error: 'duration' undeclared (first use in this function)
   30 |  duration = HAL_GPIO_ReadPin(sensorTrig_GPIO_Port, sensorTrig_Pin);
      |  ^~~~~~~~
../Core/Src/hcsr04.c:30:2: note: each undeclared identifier is reported only once for each function it appears in
../Core/Src/hcsr04.c:31:13: error: expected identifier or '(' before '->' token
   31 |  hcsr04_data->duration = duration * MICRO_CONV;
      |             ^~
../Core/Src/hcsr04.c:32:13: error: expected identifier or '(' before '->' token
   32 |  hcsr04_data->distance = (duration/cm_conversion) * CM;
      |             ^~
../Core/Src/main.c: In function 'MX_TIM2_Init':
../Core/Src/main.c:154:3: error: 'htim2' undeclared (first use in this function); did you mean 'htim3'?
  154 |   htim2.Instance = TIM2;
      |   ^~~~~
      |   htim3
make: *** [Core/Src/subdir.mk:34: Core/Src/hcsr04.o] Error 1
make: *** Waiting for unfinished jobs....
make: *** [Core/Src/subdir.mk:34: Core/Src/main.o] Error 1
"make -j16 all" terminated with exit code 2. Build might be incomplete.

15:09:03 Build Failed. 15 errors, 3 warnings. (took 361ms)

